# ml_lib

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  ml_lib.c  ml_lib.h
.github/workflows/: ci.yml
data/: iris.csv  xor2d.csv
docs/: index.html
tools/: export_viz.c  make_plots.py
